@@ -14,6 +14,8 @@
 		<style>
 			html, body {
 				height: 100%;
+				margin: 0px;
+				padding: 0px;
 				background-color: #FFFFFF;
 				font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 			}
@@ -28,12 +30,24 @@
 				background-color: #FFFFFF;
 				width: 2px;
 				height: 2px;
+				margin: 0px;
+				padding: 0px;
 			}
 			
 			.screen_running {
 				background-color: #000000;
 				width: 256px;
 				height: 240px;
+				margin: 0px;
+				padding: 0px;
+			}
+			
+			#viewer {
+				margin: 0px;
+				padding: 0px;
+				overflow: auto;
+				text-align: center;
+				position: absolute;
 			}
 			
 			.game_icon {
@@ -94,7 +108,7 @@
 		</style>
 	</head>
 	<body id="bodyId" onunload="handlePageDidUnload()">
-		<nav>
+		<nav id="nav">
 			<span style="font-size: 1.7em;">SaltyNES</span> is a NES emulator in the browser.
 			<p>
 				<b>Status:</b><br />
@@ -107,7 +121,8 @@
 				Ctrl = Select<br />
 				Z = B<br />
 				X = A<br />
-				Arrow keys = D-Pad
+				Arrow keys = D-Pad<br />
+				Full Screen = F11
 			</p>
 
 			<p id="gamepad_indicator" style="display: none;">
@@ -125,7 +140,7 @@
 				<img src="static/enable_nacl.png" />
 			</div>
 			
-			<div id="breadcrumbs_div" style="overflow: auto; clear: both; float: left;">
+			<div id="breadcrumbs_div" style="overflow: auto; clear: both; float: left; padding-top: 20px; padding-bottom: 20px;">
 			</div>
 		
 			<div id="about" style="text-align: left; padding: 10%; display: none;">
@@ -210,14 +225,17 @@
 					<button>Remove Save Data</button>
 				</a>
 			</div>
-		
+		</div>
+
+		<div id="viewer">
 			<embed name="nacl_module"
 				id="SaltyNESApp"
 				class="screen_hidden"
 				src="newlib/salty_nes.nmf"
 				type="application/x-nacl" />
 		</div>
-		<footer style="clear: both; text-align: center;">
+
+		<footer id="footer" style="clear: both; text-align: center;">
 			Copyright &copy; 2012 <a href="http://workhorsy.org">Matthew Brennan Jones</a>
 		</footer>
 	</body>
